--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/autobackup">
 
         <activity
             android:name=".MainActivity"
@@ -24,14 +25,20 @@
         </activity>
 
         <activity android:name=".acerca"
+            android:parentActivityName=".MainActivity"
             android:label="Biografia"
             android:theme="@style/AppTheme3"
             />
 
         <activity android:name=".contacto"
+            android:parentActivityName=".MainActivity"
             android:label="Contacto"
             android:theme="@style/AppTheme3"
             />
+
+        <activity android:name=".ListaMascotas">
+
+        </activity>
 
 
 
